# Modeling-Program

./: .gitignore  LICENCE  README.md  apply.py  constants.py  draw.py  drawer.py  main.py  pyproject.toml  run.bat  run.py  save.py  sm.py  standardize.py  test2.py  tools.py
data/: README.md  constants.py  data.xlsx  data2.xlsx  standardized.xlsx
lib/: constants.py  drawer.py  nn.py  tools.py
lib/utils/: __init__.py
model/: README.md
model/LinearRegression/: 2_nostandard.pkl  all_nostandard.pkl
model/NeuralNetwork/: 2.pkl  all.pkl  regular_2.pkl  regular_all.pkl
modelinglib/: constants.py  drawer.py
modelinglib/nn/: normal.py  regularized.py
modelinglib/utils/: __init__.py  normalization.py
photo/: RESULT.md  draw.py
src/: get_all_data.py  run.py
